# pypelines-etl

./: .gitignore  README.md  pyproject.toml
pypelines/: __init__.py  extract.py  load.py  pipeline.py  transform.py
tests/integration/: test_complete_pipeline.py
tests/unit/: test_extract.py  test_load.py  test_pipeline.py  test_transform.py
